--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-{% if page.title == "Home"
-   or page.title == "Blog"
+{% if page.title == "Home" %}{% assign showHeader = true %}{% endif %}
+
+<!-- added: new minimal header-->
+{% if page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Tags"
-%}{% assign showHeader = true %}{% endif %}
+%}{% assign showMinHeader = true %}{% endif %}
 
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
@@ -13,6 +15,14 @@
         <h1 class="title">{{ site.name }}</h1>
         <h2 class="description">{{ site.bio }}</h2>
 
+        {% include social-links.html %}
+    </header>
+{% endif %}
+
+<!-- added: new minimal header-->
+{% if showMinHeader == true %}
+    <header class="header-home {% if site.animation %}animated{% endif %}">
+        <h1 class="title">{{ page.title }}</h1>
         {% include social-links.html %}
     </header>
 {% endif %}
