--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
 {% if page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Tags"
+   or page.title == "Reading List"
 %}{% assign showMinHeader = true %}{% endif %}
 
 {% if showHeader == true %}
