--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
         {% if site.reading_list == true %}
             {% if page.title != "Reading List" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/reading_list">Reading List</a>
+                    <a class="link" href="{{ site.url }}/reading">Reading List</a>
                 </li>
             {% endif %}
         {% endif %}
