--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
             {% endif %}
         {% endif %}
         
-        {% if site.reading_list == true %}
+        {% if site.reading == true %}
             {% if page.title != "Reading List" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/reading">Reading List</a>
