--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ layout: compress
         {% if page.tag %}
             <div class="post">
         {% else %}
-            {% if page.title == "About" or page.title == "404" or page.title == "Reading List" %}
+            {% if page.title == "About" or page.title == "404" %}
                 <div class="page {{ page.title | downcase }}">
             {% else %}
                 <div class="{{ page.title | downcase }}">
