change reading title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 {% if page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Tags"
-   or page.title == "Reading List"
+   or page.title == "Reading"
 %}{% assign showMinHeader = true %}{% endif %}
 
 {% if showHeader == true %}
