--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
         {% if site.reading == true %}
             {% if page.title != "Reading List" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/reading">Reading List</a>
+                    <a class="link" href="{{ site.url }}/reading">Reading</a>
                 </li>
             {% endif %}
         {% endif %}
