change nav.html -- page.title for reading

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
         {% endif %}
 
         {% if site.reading == true %}
-            {% if page.title != "Reading List" %}
+            {% if page.title != "Reading" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/reading">Reading</a>
                 </li>
